Added support for custom request headers.

--- a/templates/default/xonacatl-config.conf.erb
+++ b/templates/default/xonacatl-config.conf.erb
@@ -1,3 +1,6 @@
 host <%= node[:xonacatl][:host] %>
 listen <%= node[:xonacatl][:listen] %>
 pattern <%= node[:xonacatl][:pattern] %>
+<% node[:xonacatl][:headers].each do |header| -%>
+header <%= header %>
+<% end %>
