Add configuration for health checks.

--- a/templates/default/xonacatl-config.conf.erb
+++ b/templates/default/xonacatl-config.conf.erb
@@ -4,3 +4,6 @@ pattern <%= node[:xonacatl][:pattern] %>
 <% node[:xonacatl][:headers].each do |header| -%>
 header <%= header %>
 <% end %>
+<% if node[:xonacatl][:healthcheck] -%>
+healthcheck <%= node[:xonacatl][:healthcheck] %>
+<% end %>
